--- a/main.css
+++ b/main.css
@@ -1,188 +1,206 @@
 html,
 body {
-    height: 100%;
+  height: 100%;
 }
 
 body {
-    display: flex;
-    min-height: 100vh;
-    flex-direction: column;
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
 }
 
 main {
-    flex: 1 0 auto;
+  flex: 1 0 auto;
 }
 
 .main-menu-item {
-    width: 100%;
-    margin: 10px 5px;
-    text-align: left;
-    padding-left: 30px;
+  width: 100%;
+  margin: 10px 5px;
+  text-align: left;
+  padding-left: 30px;
 }
 
 .logo {
-    height: auto;
-    width: auto;
-    max-width: 100px;
-    max-height: 100px;
+  height: auto;
+  width: auto;
+  max-width: 100px;
+  max-height: 100px;
 }
 
 .parallax {
-    z-index: 0;
+  z-index: 0;
 }
 
 @media only screen and (min-width: 1200px) {
-    .person-card {
-        width: 48% !important;
-        margin: 1%;
-    }
+  .person-card {
+    width: 48% !important;
+    margin: 1%;
+  }
 }
 
 .lightbox {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 3;
-    background-color: rgba(0, 0, 0, 0.9);
-    display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 3;
+  background-color: rgba(0, 0, 0, 0.9);
+  display: none;
 }
 
 .collapsible {
-    border: 0;
-    background-color: transparent;
+  border: 0;
+  background-color: transparent;
 }
 
 .collapsible-header,
 .side-menu {
-    background-color: #e0e0e0;
+  background-color: #e0e0e0;
 }
 
 .collapsible-body {
-    background-color: #eeeeee;
+  background-color: #eeeeee;
 }
 
 #content {
-    background-color: #ffffff;
+  background-color: #ffffff;
 }
 
 .flow-text {
-    color: black;
+  color: black;
 }
 
 #footer {
-    background-color: #bdbdbd;
+  background-color: #bdbdbd;
 }
 
 .page-copyright {
-    color: #000000;
+  color: #000000;
 }
 
 .header {
-    color: black;
-    background-color: #eeeeee;
+  color: black;
+  background-color: #eeeeee;
 }
 
 .arrow-container {
-    position: absolute;
-    width: 15%;
-    height: 100%;
-    z-index: 5;
+  position: absolute;
+  width: 15%;
+  height: 100%;
+  z-index: 5;
 }
 
 .arrow {
-    display: none;
-    margin: auto;
+  display: none;
+  margin: auto;
 }
 
 .arrow-container:hover .arrow {
-    display: block;
+  display: block;
 }
 
 .arrow-container:hover {
-    cursor: pointer;
-    transition: background-color 0.5s ease;
-    background-color: rgba(0, 0, 0, 0.5);
+  cursor: pointer;
+  transition: background-color 0.5s ease;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .noselect {
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 #scroller {
-    opacity: 0;
-    transition: opacity 0.5s ease;
+  opacity: 0;
+  transition: opacity 0.5s ease;
 }
 
 #scroller:hover {
-    opacity: 0.75;
+  opacity: 0.75;
 }
 
 .picContainer {
-    transition: height 0.5s ease;
-    height: 100%;
+  transition: height 0.5s ease;
+  height: 100%;
 }
 
 .picContainer.scrolling {
-    height: 80%;
+  height: 80%;
 }
 
 .scroller-image {
-    height: 100%;
-    margin: 0 2px;
+  height: 100%;
+  margin: 0 2px;
 }
 
 .scroller-image:hover {
-    border: 1px solid white;
-    cursor: pointer;
+  border: 1px solid white;
+  cursor: pointer;
 }
 
 .scroller-image.active {
-    border: 2px solid red;
+  border: 2px solid red;
 }
 
 [data-slides] {
-    background-image: url(/Bilder/logoBig.png);
-    background-color: grey;
-    /* Default image. */
-    background-repeat: no-repeat;
-    background-position: center top;
-    background-size: cover;
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    filter: blur(2px);
+  background-image: url(/Bilder/logoBig.png);
+  background-color: grey;
+  /* Default image. */
+  background-repeat: no-repeat;
+  background-position: center top;
+  background-size: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  filter: blur(2px);
 }
 
 .img-container {
-    height: auto;
-    position: relative;
-    top: 0;
-    left: 0;
-    border-image: none;
+  height: auto;
+  position: relative;
+  top: 0;
+  left: 0;
+  border-image: none;
 }
 
 .overlay-logo {
-    width: 100%;
-    position: relative;
-    top: 0;
-    left: 0;
-    z-index: 1;
+  width: 100%;
+  position: relative;
+  top: 0;
+  left: 0;
+  z-index: 1;
 }
 
 .team-modal {
-    max-height: 90%;
-    min-width: 90%;
+  max-height: 90%;
+  min-width: 90%;
 }
 
 .team-modal .col .flow-text {
-    margin-top: 0;
+  margin-top: 0;
+}
+
+.page-footer .footer-copyright {
+  color: rgb(23, 24, 28);
+}
+
+body.dark .card,
+body.dark .card-reveal,
+body.dark .modal,
+body.dark .modal-footer {
+  background-color: rgb(23, 24, 28);
+}
+
+body.dark .grey-text.text-darken-4,
+body.dark,
+body.dark .modal-close,
+body.dark .footer-copyright {
+  color: rgb(219, 218, 213) !important;
 }
